# Epitech-AI-OCR

./: .gitignore  README.md
OCR/: CMakeLists.txt  ocr_network.nn  ocr_network_10h10v1n.nn  ocr_network_10h10v1n1d.nn  ocr_network_10h10v2d.nn  ocr_network_10h10v2n1d.nn  ocr_network_10h10vccc.nn  ocr_network_10h10vccc1n.nn  ocr_network_10h10vccc1n1d.nn  ocr_network_10h10vccc2n1d.nn
OCR/includes/: ImageProcessor.h  ImagesLoader.h  NeuralNetork.hpp  NeuralNetwork.hpp  OCR.h  TextImageProcessor.hpp  Trainer.hpp  cvplot.h  dirent.h  indexed_vector.hpp  ocr_utils.hpp
OCR/sources/: ImageProcessor.cpp  ImagesLoader.cpp  NeuralNetwork.cpp  OCR.cpp  TextImageProcessor.cpp  Trainer.cpp  cvplot.cpp  main.cpp  ocr_utils.cpp  trainer_main.cpp
